<!--
  ~ This file is part of INU Club.
  ~
  ~ Copyright (C) 2021 INU Global App Center <potados99@gmail.com>
  ~
  ~ INU Club is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ INU Club is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">club</string>
    <string name="tab_today">투데이</string>
    <string name="tab_suggestions">추천</string>
    <string name="tab_search">검색</string>
    <string name="tab_categories">카테고리</string>
    <string name="tab_gatherings">소모임</string>
    <string name="description_offline">인터넷에 연결되어 있지 않습니다. 연결을 복구하기 위해 계속 시도중입니다.</string>
    <string name="title_suggestions">이런 동아리는 어때요?</string>
    <string name="title_categories">카테고리</string>
    <string name="title_gatherings">소모임</string>
    <string name="description_toolbar_logo" tools:keep="@string/description_toolbar_logo">툴바에 있는 로고입니다.</string>
    <string name="hint_search" tools:keep="@string/hint_search">동아리명, 키워드를 입력하세요</string>
    <string name="description_search_button" tools:keep="@string/description_search_button">검색 버튼입니다.</string>
    <string name="menu_my_page">내 정보</string>
    <string name="menu_notifications">알림</string>
    <string name="text_aint_nothing">아무것도 없어요 ㅠㅡㅠ</string>
</resources>