<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ This file is part of INU Club.
  ~
  ~ Copyright (C) 2021 INU Global App Center <potados99@gmail.com>
  ~
  ~ INU Club is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ INU Club is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/tab_today"
        android:icon="@drawable/abc_vector_test"
        android:title="@string/tab_today" />

    <item
        android:id="@+id/tab_suggestions"
        android:icon="@drawable/abc_vector_test"
        android:title="@string/tab_suggestions" />

    <item
        android:id="@+id/tab_search"
        android:icon="@drawable/abc_vector_test"
        android:title="@string/tab_search" />

    <item
        android:id="@+id/tab_categories"
        android:icon="@drawable/abc_vector_test"
        android:title="@string/tab_categories" />

    <item
        android:id="@+id/tab_gatherings"
        android:icon="@drawable/abc_vector_test"
        android:title="@string/tab_gatherings" />
</menu>